# fastapi-project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: python-package.yml
app/: main.py
app/core/: config.py
app/db/: schema.py
app/routers/: user.py
tests/: test_db.py
tests/routers/: test_user.py
